# airbnb-clone-backend

./: README.md  build.sh  pyproject.toml  render.yaml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_rename_kind_category_category_kind.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user_and_more.py
experiences/: admin.py  models.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_description_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/: models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py  0004_remove_photo_description_remove_photo_experience_and_more.py  0005_alter_photo_file.py  (+1 more)
reviews/: admin.py  models.py  serializers.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: models.py  serializers.py  urls.py  views.py
(+15 files in other folders)
